--- a/kaggle_house_price_module/index.ipynb
+++ b/kaggle_house_price_module/index.ipynb
@@ -249,7 +249,9 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_train = df_train.drop(na_data[na_data['count']>1].index, axis=1)  # 删除上述前18个特征 "
@@ -258,7 +260,9 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_train = df_train.drop(df_train.loc[df_train[\"Electrical\"].isnull()].index)  # 删除 Electrical 取值丢失的样本"
@@ -293,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 70,
    "metadata": {
     "collapsed": true
    },
@@ -304,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 71,
    "metadata": {
     "collapsed": true
    },
@@ -315,8 +319,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
-   "metadata": {},
+   "execution_count": 72,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_y = df_tr[\"SalePrice\"]"
@@ -324,8 +330,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
-   "metadata": {},
+   "execution_count": 73,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "quantity = [attr for attr in df_X.columns if df_X.dtypes[attr] != 'object'] ## 数值变量集合"
@@ -333,8 +341,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
-   "metadata": {},
+   "execution_count": 74,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "quality = [attr for attr in df_X.columns if df_X.dtypes[attr] == 'object']  # 类型变量集合"
@@ -342,8 +352,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
-   "metadata": {},
+   "execution_count": 75,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for c in quality:\n",
@@ -355,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 81,
    "metadata": {
     "collapsed": true
    },
@@ -367,8 +379,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 88,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MSSubClass       0\n",
+       "LotFrontage      0\n",
+       "LotArea          0\n",
+       "OverallQual      0\n",
+       "OverallCond      0\n",
+       "YearBuilt        0\n",
+       "YearRemodAdd     0\n",
+       "MasVnrArea       0\n",
+       "BsmtFinSF1       0\n",
+       "BsmtFinSF2       0\n",
+       "BsmtUnfSF        0\n",
+       "TotalBsmtSF      0\n",
+       "1stFlrSF         0\n",
+       "2ndFlrSF         0\n",
+       "LowQualFinSF     0\n",
+       "GrLivArea        0\n",
+       "BsmtFullBath     0\n",
+       "BsmtHalfBath     0\n",
+       "FullBath         0\n",
+       "HalfBath         0\n",
+       "BedroomAbvGr     0\n",
+       "KitchenAbvGr     0\n",
+       "TotRmsAbvGrd     0\n",
+       "Fireplaces       0\n",
+       "GarageYrBlt      0\n",
+       "GarageCars       0\n",
+       "GarageArea       0\n",
+       "WoodDeckSF       0\n",
+       "OpenPorchSF      0\n",
+       "EnclosedPorch    0\n",
+       "3SsnPorch        0\n",
+       "ScreenPorch      0\n",
+       "PoolArea         0\n",
+       "MiscVal          0\n",
+       "MoSold           0\n",
+       "YrSold           0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "missing_cols = quantity_miss_cal[quantity_miss_cal > 0].index"
@@ -376,8 +444,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 84,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['LotFrontage', 'GarageYrBlt', 'MasVnrArea'], dtype='object')"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "missing_cols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_tr[missing_cols] = df_tr[missing_cols].fillna(0.) #从这些变量的意义来看，缺失值可能是0"
@@ -385,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +487,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 101,
    "metadata": {
     "collapsed": true
    },
@@ -439,11 +529,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
     "a = anova(df_tr, quality)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unhashable type: 'slice'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-142-1c406d75ad4a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/Applications/anaconda3/lib/python3.6/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   1962\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem_multilevel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1963\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1964\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem_column\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1965\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1966\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_getitem_column\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Applications/anaconda3/lib/python3.6/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m_getitem_column\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   1969\u001b[0m         \u001b[0;31m# get column\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1970\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_unique\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1971\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_item_cache\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1972\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1973\u001b[0m         \u001b[0;31m# duplicate columns & possible reduce dimensionality\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Applications/anaconda3/lib/python3.6/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m_get_item_cache\u001b[0;34m(self, item)\u001b[0m\n\u001b[1;32m   1641\u001b[0m         \u001b[0;34m\"\"\"Return the cached item, item represents a label indexer.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1642\u001b[0m         \u001b[0mcache\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_item_cache\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1643\u001b[0;31m         \u001b[0mres\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcache\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1644\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mres\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1645\u001b[0m             \u001b[0mvalues\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: unhashable type: 'slice'"
+     ]
+    }
+   ],
+   "source": [
+    "a[0:10, 0:1]"
    ]
   },
   {
