--- a/panda_module/index.ipynb
+++ b/panda_module/index.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
-    "%load_ext autoreload\n",
+    "%reload_ext autoreload\n",
     "%autoreload 2"
    ]
   },
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
